fixed spacing of website

--- a/style.css
+++ b/style.css
@@ -145,6 +145,15 @@ body {
   color: var(--clr-primary-700-blue);
 }
 
+p:not([class]) { 
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"] { 
+  max-width: 45ch;
+  text-align: justify;
+}
 /* button component*/
 
 .button {
@@ -283,6 +292,32 @@ body {
   border: 0 !important;
 }
 
+:where(.flow :not(:first-child)) { 
+  margin-top: var(--flow-spacer, 3em);
+}
+
+.container { 
+  --max-width: 1110px; /* From figma file*/
+  --gap: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--gap)*2));
+  margin-inline: auto;
+
+}
+
+.even-columns { 
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 50em) { 
+  .even-columns { 
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
+
 /*----------------*/
 /* Text color */
 .text-primary-400-red { 
@@ -357,26 +392,7 @@ body {
 .fs-500 { font-size: var(--fs-500);}
 .fs-600 { font-size: var(--fs-600);}
 
-.container { 
-  --max-width: 1110px; /* From figma file*/
-  --gap: 1rem;
 
-  width: min(var(--max-width), 100% - (var(--gap)*2));
-  margin-inline: auto;
-
-}
-
-.even-columns { 
-  display: grid;
-  gap: 1rem;
-}
-
-@media (min-width: 50em) { 
-  .even-columns { 
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-  }
-}
 
 .padding-block-900 { 
   padding-block: var(--size-900);
